UE and some other optimizations

--- a/src/app/pages/post/post-form/post-form.component.html
+++ b/src/app/pages/post/post-form/post-form.component.html
@@ -96,6 +96,7 @@
           <nz-tree-select
             nzShowSearch
             nzCheckable
+            nzCheckStrictly
             nzDefaultExpandAll
             formControlName="category"
             nzPlaceHolder="请选择分类"
