--- a/src/app/pages/post/post-list/post-list.component.html
+++ b/src/app/pages/post/post-list/post-list.component.html
@@ -248,6 +248,7 @@
                 <nz-tree-select
                   nzShowSearch
                   nzCheckable
+                  nzCheckStrictly
                   nzDefaultExpandAll
                   formControlName="category"
                   nzPlaceHolder="请选择分类"
