--- a/src/app/pages/taxonomy/taxonomy-list/taxonomy-list.component.html
+++ b/src/app/pages/taxonomy/taxonomy-list/taxonomy-list.component.html
@@ -31,12 +31,14 @@
 >
   <thead>
   <tr>
-    <th nzWidth="40px" [nzChecked]="allChecked" [nzIndeterminate]="indeterminate" (nzCheckedChange)="onAllChecked($event)"></th>
+    <th nzWidth="40px" [nzChecked]="allChecked" [nzIndeterminate]="indeterminate"
+        (nzCheckedChange)="onAllChecked($event)"></th>
     <th nzColumnKey="name">名称</th>
     <ng-container *ngIf="taxonomyType !== 'tag'">
       <th nzWidth="160px" nzColumnKey="slug">别名</th>
       <th nzColumnKey="description">描述</th>
-      <th nzWidth="100px" nzColumnKey="termOrder" [nzSortFn]="true" [nzSortPriority]="true">排序</th>
+      <th nzWidth="80px" nzColumnKey="termOrder" [nzSortFn]="true" [nzSortPriority]="true">排序</th>
+      <th nzWidth="80px" nzColumnKey="isRequired">基础数据</th>
     </ng-container>
     <th nzWidth="100px" nzColumnKey="status" [nzFilters]="statusFilter" [nzFilterFn]="true">状态</th>
     <th nzWidth="100px" nzColumnKey="count" [nzSortFn]="true" [nzSortPriority]="true">
@@ -47,12 +49,14 @@
   </thead>
   <tbody>
   <tr *ngFor="let data of taxonomyList">
-    <td [nzChecked]="checkedMap[data.taxonomyId] || false" (nzCheckedChange)="onItemChecked(data.taxonomyId, $event)"></td>
+    <td [nzChecked]="checkedMap[data.taxonomyId] || false"
+        (nzCheckedChange)="onItemChecked(data.taxonomyId, $event)"></td>
     <td nzEllipsis [title]="data.name">{{ data.name }}</td>
     <ng-container *ngIf="taxonomyType !== 'tag'">
       <td nzEllipsis [title]="data.slug">{{ data.slug }}</td>
       <td [title]="data.description">{{ data.description }}</td>
       <td nzEllipsis nzAlign="right" [title]="data.termOrder">{{ data.termOrder }}</td>
+      <td [title]="data.isRequired ? '是' : '否'">{{ data.isRequired ? '是' : '否' }}</td>
     </ng-container>
     <td nzEllipsis [title]="data.status">
       <a [ngClass]="'status-' + data.status"
@@ -61,7 +65,8 @@
     <td nzAlign="right">
       <a *ngIf="taxonomyType === 'post'" routerLink="/post" [queryParams]="{category: data.slug}">{{ data.count }}</a>
       <a *ngIf="taxonomyType === 'tag'" routerLink="/post" [queryParams]="{tag: data.slug}">{{ data.count }}</a>
-      <a *ngIf="taxonomyType === 'link'" routerLink="/link" [queryParams]="{taxonomy: data.taxonomyId}">{{ data.count }}</a>
+      <a *ngIf="taxonomyType === 'link'" routerLink="/link"
+         [queryParams]="{taxonomy: data.taxonomyId}">{{ data.count }}</a>
     </td>
     <td nzRight>
       <ng-container *ngIf="taxonomyType !== 'tag' && data.status === 'publish'">
@@ -71,9 +76,9 @@
       <a (click)="editTaxonomy(data)" *ngIf="taxonomyType=== 'post'">编辑</a>
       <a (click)="editTaxonomy(data)" *ngIf="taxonomyType=== 'tag'">编辑</a>
       <a (click)="editTaxonomy(data)" *ngIf="taxonomyType=== 'link'">编辑</a>
-      <ng-container *ngIf="data.status !== 'trash'">
+      <ng-container *ngIf="data.status !== 'trash' && data.isRequired !== 1">
         <nz-divider nzType="vertical"></nz-divider>
-        <a (click)="deleteTaxonomies(data.taxonomyId)">删除</a>
+        <a (click)="deleteTaxonomies(data)">删除</a>
       </ng-container>
     </td>
   </tr>
@@ -139,8 +144,9 @@
               nzShowSearch
               formControlName="parent"
               nzPlaceHolder="请选择分类"
-              [nzDropdownStyle]="{'max-height': '400px'}"
+              [nzDisabled]="!!activeTaxonomy.isRequired"
               [nzNodes]="taxonomyTree"
+              [nzDropdownStyle]="{'max-height': '400px'}"
             ></nz-tree-select>
           </nz-form-control>
         </nz-form-item>
@@ -159,8 +165,11 @@
         <nz-form-label nzRequired [nzSpan]="4">状态</nz-form-label>
         <nz-form-control [nzErrorTip]="statusErrorTpl">
           <nz-select formControlName="status" nzPlaceHolder="请选择状态">
-            <nz-option *ngFor="let status of taxonomyStatusList"
-                       [nzValue]="status.key" [nzLabel]="status.label" [nzDisabled]="status.disabled"></nz-option>
+            <nz-option
+              *ngFor="let status of taxonomyStatusList"
+              [nzValue]="status.key"
+              [nzLabel]="status.label"
+              [nzDisabled]="status.disabled"></nz-option>
           </nz-select>
           <ng-template #statusErrorTpl let-control>
             <ng-container *ngIf="control.hasError('required')">请选择状态</ng-container>
@@ -181,7 +190,7 @@
       <p>确定删除这 <span class="confirm-warning">{{checkedLength}}</span> 个标签吗？</p>
     </ng-container>
     <ng-container *ngIf="taxonomyType !== 'tag'">
-      <p>请确认其和所有后代分类下已没有关联的{{taxonomyType === 'link' ? '链接' : '内容'}}，否则，将不允许删除。</p>
+      <p>请确认其和所有后代分类下已没有关联的{{taxonomyType === 'link' ? '链接' : '文章'}}，否则，将不允许删除。</p>
       <p>删除分类时，其和所有后代分类将同时被删除。</p>
       <p>确定删除这 <span class="confirm-warning">{{checkedLength}}</span> 个分类吗？</p>
     </ng-container>
