--- a/src/app/pages/link/link-list/link-list.component.html
+++ b/src/app/pages/link/link-list/link-list.component.html
@@ -1,7 +1,8 @@
 <div class="table-operations">
   <a nz-button nzType="primary" routerLink="/taxonomy/link">管理链接分类</a>
+  <button nz-button nzType="primary" (click)="editLink()">新增</button>
   <button nz-button [disabled]="!allChecked && !indeterminate">编辑</button>
-  <button nz-button [disabled]="!allChecked && !indeterminate">删除</button>
+  <button nz-button [disabled]="!trashEnabled" (click)="deleteLinks()">删除</button>
   <div class="table-search">
     <nz-input-group nzSearch [nzAddOnAfter]="searchBtn">
       <input type="text" nz-input [(ngModel)]="keyword" (keyup)="onSearch($event)" placeholder="Search..."/>
@@ -25,7 +26,7 @@
   [nzPageSize]="pageSize"
   (nzQueryParams)="onQueryParamsChange($event)"
   [nzShowTotal]="rangeTemplate"
-  [nzScroll]="{x: '1300px'}"
+  [nzScroll]="{x: '1400px'}"
 >
   <thead>
   <tr>
@@ -38,6 +39,7 @@
     <th nzWidth="80px" nzColumnKey="status" [nzFilters]="statusFilter" [nzFilterFn]="true">状态</th>
     <th nzWidth="100px" nzColumnKey="target" [nzFilters]="targetFilter" [nzFilterFn]="true">打开方式</th>
     <th nzWidth="70px" nzColumnKey="order" [nzSortFn]="true" [nzSortPriority]="true">排序</th>
+    <th nzWidth="100px" nzColumnKey="taxoomy">分类</th>
     <th nzWidth="130px" nzColumnKey="modified" [nzSortFn]="true" [nzSortPriority]="true">修改时间</th>
     <th nzWidth="130px" nzColumnKey="created" [nzSortFn]="true" [nzSortPriority]="true">添加时间</th>
     <th nzWidth="110px" nzRight>操作</th>
@@ -60,10 +62,13 @@
       <a routerLink="./" [queryParams]="{target: data.linkTarget}">{{ data.linkTarget | linkTarget }}</a>
     </td>
     <td>{{ data.linkOrder }}</td>
+    <td nzEllipsis [title]="data.taxonomies?.[0]?.name">
+      <a routerLink="./" [queryParams]="{taxonomy: data.taxonomies?.[0]?.taxonomyId}">{{ data.taxonomies?.[0]?.name }}</a>
+    </td>
     <td nzEllipsis [title]="data.modified | date:'yyyy-MM-dd HH:mm'">{{ data.modified | date:'yy-MM-dd HH:mm' }}</td>
     <td nzEllipsis [title]="data.created | date:'yyyy-MM-dd HH:mm'">{{ data.created | date:'yy-MM-dd HH:mm' }}</td>
     <td nzRight>
-      <a href="#">编辑</a>
+      <a (click)="editLink(data)">编辑</a>
       <ng-container *ngIf="data.linkStatus !== 'trash'">
         <nz-divider nzType="vertical"></nz-divider>
         <a (click)="deleteLinks(data.linkId)">删除</a>
@@ -74,4 +79,117 @@
 </nz-table>
 <ng-template #rangeTemplate let-range="range" let-total>
   当前：第 <span style="color: red">{{ range[0] }}-{{ range[1] }}</span> 条，共：<span style="color: red">{{ total }}</span> 条
+</ng-template>
+<nz-modal
+  nzCentered
+  [(nzVisible)]="editModalVisible"
+  [nzTitle]="editModalTitle"
+  [nzContent]="editModalContent"
+  [nzFooter]="editModalFooter"
+  (nzOnCancel)="closeEditModal()"
+  [nzMaskClosable]="false"
+>
+  <ng-template #editModalTitle>
+    {{activeLink.linkId ? '编辑' : '新增'}}链接
+  </ng-template>
+  <ng-template #editModalContent>
+    <form nz-form [formGroup]="linkForm" class="link-form">
+      <nz-form-item>
+        <nz-form-label nzRequired [nzSpan]="4">名称</nz-form-label>
+        <nz-form-control [nzErrorTip]="nameErrorTpl">
+          <input nz-input type="text" formControlName="name" [maxlength]="maxNameLength" placeholder="请输入名称"/>
+          <ng-template #nameErrorTpl let-control>
+            <ng-container *ngIf="control.hasError('required')">请输入名称</ng-container>
+            <ng-container *ngIf="control.hasError('maxlength')">名称最大长度为{{maxNameLength}}字符</ng-container>
+          </ng-template>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+        <nz-form-label nzRequired [nzSpan]="4">URL</nz-form-label>
+        <nz-form-control [nzErrorTip]="urlErrorTpl">
+          <input nz-input type="text" formControlName="url" [maxlength]="maxUrlLength" placeholder="请输入名称"/>
+          <ng-template #urlErrorTpl let-control>
+            <ng-container *ngIf="control.hasError('required')">请输入URL</ng-container>
+            <ng-container *ngIf="control.hasError('maxlength')">URL最大长度为{{maxUrlLength}}字符</ng-container>
+          </ng-template>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+        <nz-form-label nzRequired [nzSpan]="4">描述</nz-form-label>
+        <nz-form-control [nzErrorTip]="descErrorTpl">
+          <nz-textarea-count [nzMaxCharacterCount]="maxDescriptionLength">
+            <textarea nz-input rows="2" formControlName="description" placeholder="请输入描述"></textarea>
+          </nz-textarea-count>
+          <ng-template #descErrorTpl let-control>
+            <ng-container *ngIf="control.hasError('required')">请输入描述</ng-container>
+            <ng-container *ngIf="control.hasError('maxlength')">描述最大长度为{{maxDescriptionLength}}字符</ng-container>
+          </ng-template>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+        <nz-form-label nzRequired [nzSpan]="4">可见性</nz-form-label>
+        <nz-form-control>
+          <nz-radio-group formControlName="scope" nzName="scope">
+            <label nz-radio nzValue="site">全站</label>
+            <label nz-radio nzValue="homepage">首页</label>
+          </nz-radio-group>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+        <nz-form-label nzRequired [nzSpan]="4">打开方式</nz-form-label>
+        <nz-form-control>
+          <nz-radio-group formControlName="target" nzName="target">
+            <label nz-radio nzValue="_blank">新页面</label>
+            <label nz-radio nzValue="_self">当前页</label>
+            <label nz-radio nzValue="_top">父页面</label>
+          </nz-radio-group>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+        <nz-form-label nzRequired [nzSpan]="4">排序</nz-form-label>
+        <nz-form-control [nzErrorTip]="orderErrorTpl">
+          <input nz-input type="text" formControlName="order" [maxlength]="3" placeholder="请输入排序"/>
+          <ng-template #orderErrorTpl let-control>
+            <ng-container *ngIf="control.hasError('required')">请输入排序</ng-container>
+            <ng-container *ngIf="control.hasError('pattern')">排序值范围为 0~999</ng-container>
+          </ng-template>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+        <nz-form-label nzRequired [nzSpan]="4">分类</nz-form-label>
+        <nz-form-control [nzErrorTip]="taxonomyErrorTpl">
+          <nz-tree-select
+            nzShowSearch
+            nzDefaultExpandAll
+            formControlName="taxonomy"
+            nzPlaceHolder="请选择分类"
+            [nzNodes]="taxonomyTree"
+            [nzDropdownStyle]="{'max-height': '400px'}"
+          >
+          </nz-tree-select>
+          <ng-template #taxonomyErrorTpl let-control>
+            <ng-container *ngIf="control.hasError('required')">请选择分类</ng-container>
+          </ng-template>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+        <nz-form-label [nzSpan]="4">状态</nz-form-label>
+        <nz-form-control>
+          <nz-radio-group formControlName="status" nzName="status">
+            <label nz-radio nzValue="normal">正常</label>
+            <label nz-radio nzDisabled nzValue="trash">已删除</label>
+          </nz-radio-group>
+        </nz-form-control>
+      </nz-form-item>
+    </form>
+  </ng-template>
+  <ng-template #editModalFooter>
+    <button nz-button nzType="default" (click)="closeEditModal()">取消</button>
+    <button nz-button nzType="primary" (click)="saveLink()" [nzLoading]="saveLoading">确定</button>
+  </ng-template>
+</nz-modal>
+<ng-template #confirmModalContent>
+  <div>
+    <p>确定删除这 <span class="confirm-warning">{{checkedLength}}</span> 个链接吗？</p>
+  </div>
 </ng-template>
