--- a/src/app/pages/taxonomy/taxonomy-list/taxonomy-list.component.html
+++ b/src/app/pages/taxonomy/taxonomy-list/taxonomy-list.component.html
@@ -138,7 +138,7 @@
           </nz-form-control>
         </nz-form-item>
         <nz-form-item>
-          <nz-form-label [nzSpan]="4">父节点</nz-form-label>
+          <nz-form-label [nzSpan]="4">父级分类</nz-form-label>
           <nz-form-control>
             <nz-tree-select
               nzShowSearch
